--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -1,2 +1,21 @@
 # Funciones y Variables.
 
+## Funciones predefinidas en Python.
+Es una función que está disponible para su uso inmediatamente después de iniciar el intérprete de Python, sin necesidad de importar ningún módulo.
+
+## Características Claves.
+
+Estas funciones son esenciales y vienen con el lenguaje, proporcionando funcionalidades comunes y de propósito general.
+
+- **Disponibilidad Universal**: siempre están accesibles en cualquier parte del código Python.
+
+- **Eficiencia**: suelen estar implementadas en C y optimizadas, haciéndolas muy eficientes para tareas comunes.
+
+- **Fundamentales**: proporcionan la base para muchas operaciones de programación esenciales.
+
+  Ejemplos de funciones predefinidas:
+
+  | Función | Descripción | Ejemplos |
+  | :---: | :---: | :---: |
+  
+
