--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -17,5 +17,6 @@ Estas funciones son esenciales y vienen con el lenguaje, proporcionando funciona
 
   | Función | Descripción | Ejemplos |
   | :---: | :---: | :---: |
+  | print() | Muestra datos en la consola (salida estándar) | print("Hola") [Devuelve: Hola] |
   
 
