--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -18,4 +18,4 @@ Estas funciones son esenciales y vienen con el lenguaje, proporcionando funciona
   | Función | Descripción | Ejemplos |
   | :---: | :---: | :---: |
   | print() | Muestra datos en la consola (salida estándar) | print("Hola"), *Devuelve: Hola* |
-  | type() | Devuelve el tipo de un objeto  | type("42"), *Devuelve: <class 'int'> |
+  | type() | Devuelve el tipo de un objeto  | type("42"), *Devuelve: <class 'int'>* |
