--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -19,3 +19,15 @@ Estas funciones son esenciales y vienen con el lenguaje, proporcionando funciona
   | :---: | :---: | :---: |
   | print() | Muestra datos en la consola (salida estándar) | print("Hola") - *Devuelve: Hola* |
   | type() | Devuelve el tipo de un objeto  | type(42) - *Devuelve: <class 'int'>* |
+
+## Diferencia con las Funciones de Módulos.
+
+Es importante distinguirlas de las funciones que requieren importación:
+
+- **Predefinidas (Built-in)**: como *print()* o *len()*. No necesitan **import**.
+
+- **De Módulos**: requieren una declaración *import* para ser utilizadas (ej. **math.sqrt()** requiere **import math**).
+
+# Función print().
+
+
