--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -30,4 +30,9 @@ Es importante distinguirlas de las funciones que requieren importación:
 
 # Función print().
 
+Es, quizás, la función predefinida más fundamental en Python. Su propósito principal es *mostrar texto u objetos en la consola* o enviarlos a otro flujo de salida estándar. La sintaxis básica de la función **print()** es la siguiente:
+
+python{
+print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)
+}
 
