--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -32,7 +32,7 @@ Es importante distinguirlas de las funciones que requieren importación:
 
 Es, quizás, la función predefinida más fundamental en Python. Su propósito principal es *mostrar texto u objetos en la consola* o enviarlos a otro flujo de salida estándar. La sintaxis básica de la función **print()** es la siguiente:
 
-´´´{Python}
+'''{Python}
 print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)
-´´´
+'''
 
