--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -36,4 +36,4 @@ Es, quizás, la función predefinida más fundamental en Python. Su propósito p
 print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)
 ```
 
-1. *objects (Argumentos Posicionales): puedes pasarle cero o más objetos separados por comas. print() los convertirá a su representación en cadena antes de mostrarlos.
+- *objects (Argumentos Posicionales): puedes pasarle cero o más objetos separados por comas. La función **print()** los convertirá a su representación en cadena antes de mostrarlos.
