--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -37,3 +37,10 @@ print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)
 ```
 
 - ***objects (Argumentos Posicionales)**: puedes pasarle cero o más objetos separados por comas. La función **print()** los convertirá a su representación en cadena antes de mostrarlos.
+
+```Python
+nombre = "NiClau"
+edad = 11
+print("Mi nombre es", nombre, "y tengo", edad, "años.")
+# Salida: Mi nombre es NiClau y tengo 11 años.
+```
