--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -44,3 +44,5 @@ edad = 11
 print("Mi nombre es", nombre, "y tengo", edad, "años.")
 # Salida: Mi nombre es NiClau y tengo 11 años.
 ```
+
+## Parámetros Clave Opcionales:
