--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -46,3 +46,6 @@ print("Mi nombre es", nombre, "y tengo", edad, "años.")
 ```
 
 ## Parámetros Clave Opcionales:
+Los argumentos posicionales son los datos a mostrar. Los argumentos de palabra clave (sep, end, file, flush) controlan cómo se muestra la salida.
+
+- **sep(separador)**: define la cadena que se inserta entre los objetos mostrados. El valor por defecto es un espacio simple (' ').
