--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -49,3 +49,8 @@ print("Mi nombre es", nombre, "y tengo", edad, "años.")
 Los argumentos posicionales son los datos a mostrar. Los argumentos de palabra clave (sep, end, file, flush) controlan cómo se muestra la salida.
 
 - **sep(separador)**: define la cadena que se inserta entre los objetos mostrados. El valor por defecto es un espacio simple (' ').
+
+```Python
+print("Manzana", "Limon", "Pera", sep=('|'))
+# Salida: Manzana | Limon | Pera
+```
