--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -54,3 +54,7 @@ Los argumentos posicionales son los datos a mostrar. Los argumentos de palabra c
 print("Manzana", "Limon", "Pera", sep=('|'))
 # Salida: Manzana | Limon | Pera
 ```
+```Python
+print(13, 11, 2025, sep=('-'))
+# Salida: 13-11-2025
+```
