--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -58,3 +58,14 @@ print("Manzana", "Limon", "Pera", sep=('|'))
 print(13, 11, 2025, sep=('-'))
 # Salida: 13-11-2025
 ```
+
+- **end (Finalizador)**: define la cadena que se añade al final de la salida después de que todos los objetos han sido mostrados. El valor por defecto es un salto de línea ('\n'), lo que hace que la siguiente llamada a **print()** comience en una nueva línea.
+
+**Ejemplo 1:** comportamiento por defecto.
+```Python
+print("Línea 1")
+print("Línea 2")
+# Salida:
+Línea 1
+Línea 2
+```
