--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -69,3 +69,11 @@ print("Línea 2")
 Línea 1
 Línea 2
 ```
+
+**Ejemplo 2:** cambiando el finalizador.
+```Python
+print("Línea 1", end=('/'))
+print("Línea 2")
+# Salida:
+Línea 1 / Línea 2
+```
