--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -77,3 +77,17 @@ print("Línea 2")
 # Salida:
 Línea 1 / Línea 2
 ```
+
+- **file (flujo de salida)**: se utiliza principalmente dentro de la función predefinida **print()** para especificar dónde debe enviarse la salida.
+
+**Ejemplo 1:** Salida Predeterminada (Consola).
+
+```Python
+import sys
+# Estas dos líneas son equivalentes:
+print("Hola mundo")
+print("Hola mundo", file=sys.stdout)
+# Salida:
+Hola mundo
+Hola mundo
+```
