--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -88,6 +88,6 @@ import sys
 print("Hola mundo")
 print("Hola mundo", file=sys.stdout)
 # Salida:
-Hola mundo
-Hola mundo
+# Hola mundo
+# Hola mundo
 ```
