--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -66,8 +66,8 @@ print(13, 11, 2025, sep=('-'))
 print("Línea 1")
 print("Línea 2")
 # Salida:
-Línea 1
-Línea 2
+# Línea 1
+# Línea 2
 ```
 
 **Ejemplo 2:** cambiando el finalizador.
@@ -75,7 +75,7 @@ Línea 2
 print("Línea 1", end=('/'))
 print("Línea 2")
 # Salida:
-Línea 1 / Línea 2
+# Línea 1 / Línea 2
 ```
 
 - **file (flujo de salida)**: se utiliza principalmente dentro de la función predefinida **print()** para especificar dónde debe enviarse la salida.
