--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -80,7 +80,7 @@ print("Línea 2")
 
 - **file (flujo de salida)**: se utiliza principalmente dentro de la función predefinida **print()** para especificar dónde debe enviarse la salida.
 
-**Ejemplo 1:** Salida Predeterminada (Consola).
+**Ejemplo 1:** salida Predeterminada (Consola).
 
 ```Python
 import sys
@@ -90,4 +90,19 @@ print("Hola mundo", file=sys.stdout)
 # Salida:
 # Hola mundo
 # Hola mundo
+```
+
+**Ejemplo 2:** salida redefinida.
+
+```Python
+# Abre un archivo llamado 'log.txt' en modo de escritura ('w')
+with open('log.txt', 'w') as archivo_log:
+    # La salida se envía al objeto 'archivo_log' en lugar de a la consola
+    print("Inicio del proceso...", file=archivo_log)
+    print("Datos procesados exitosamente.", file=archivo_log)
+
+# Después de que el bloque 'with' termina, el archivo se cierra automáticamente.
+# El archivo 'log.txt' contendrá:
+# Inicio del proceso...
+# Datos procesados exitosamente.
 ```
