--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -4,7 +4,6 @@
 Es una función que está disponible para su uso inmediatamente después de iniciar el intérprete de Python, sin necesidad de importar ningún módulo.
 
 ## Características Claves.
-
 Estas funciones son esenciales y vienen con el lenguaje, proporcionando funcionalidades comunes y de propósito general.
 
 - **Disponibilidad Universal**: siempre están accesibles en cualquier parte del código Python.
@@ -21,7 +20,6 @@ Estas funciones son esenciales y vienen con el lenguaje, proporcionando funciona
   | type() | Devuelve el tipo de un objeto  | type(42) - *Devuelve: <class 'int'>* |
 
 ## Diferencia con las Funciones de Módulos.
-
 Es importante distinguirlas de las funciones que requieren importación:
 
 - **Predefinidas (Built-in)**: como *print()* o *len()*. No necesitan **import**.
@@ -29,7 +27,6 @@ Es importante distinguirlas de las funciones que requieren importación:
 - **De Módulos**: requieren una declaración *import* para ser utilizadas (ej. **math.sqrt()** requiere **import math**).
 
 # Función print().
-
 Es, quizás, la función predefinida más fundamental en Python. Su propósito principal es *mostrar una cadena de texto u objetos en la consola* o enviarlos a otro flujo de salida estándar. La sintaxis básica de la función **print()** es la siguiente:
 
 ```Python
@@ -108,3 +105,4 @@ with open('log.txt', 'w') as archivo_log:
 ```
 
 # Función Input().
+Es una función integrada que se utiliza para obtener la entrada de datos del usuario a través de la consola o la terminal.
