--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -105,4 +105,13 @@ with open('log.txt', 'w') as archivo_log:
 ```
 
 # Función Input().
-Es una función integrada que se utiliza para obtener la entrada de datos del usuario a través de la consola o la terminal.
+Es una función integrada que **se utiliza para obtener la entrada de datos del usuario** a través de la consola o la terminal.
+
+## Uso Básico de input().
+La función *input()* hace dos cosas principales:
+
+- Muestra un mensaje (opcional) en la pantalla.
+
+- Pausa la ejecución del programa y espera a que el usuario escriba algo y presione Enter.
+
+- Devuelve la entrada del usuario como una cadena de texto (str).
