--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -115,3 +115,13 @@ La función *input()* hace dos cosas principales:
 - Pausa la ejecución del programa y espera a que el usuario escriba algo y presione Enter.
 
 - Devuelve la entrada del usuario como una cadena de texto (str).
+
+```Python
+input("Cual es tu nombre: ")
+print("Hola NicLau")
+# Salida:
+# Cual es tu nombre: NicLau
+# Hola NicLau
+```
+
+```
