--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -123,3 +123,5 @@ print("Hola NicLau")
 # Cual es tu nombre: NicLau
 # Hola NicLau
 ```
+
+Es fundamental recordar que la función **input()** *siempre devuelve el valor como una cadena de texto (str)*, incluso si el usuario introduce números.
