--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -125,3 +125,16 @@ print("Hola NicLau")
 ```
 
 Es fundamental recordar que la función **input()** *siempre devuelve el valor como una cadena de texto (str)*, incluso si el usuario introduce números.
+
+# Variables.
+Son esencialmente *etiquetas o nombres simbólicos que se utilizan para almacenar y referenciar valores* en la memoria de la computadora. A diferencia de otros lenguajes de programación, *Python no requiere que declares explícitamente el tipo de dato de una variable*; el tipo se infiere dinámicamente cuando se le asigna un valor.
+
+## Reglas para Nombrar Variables.
+Hay tres reglas principales que debes seguir al nombrar variables en Python:
+
+- **Caracteres Válidos**: solo pueden contener letras (a-z, A-Z), números (0-9) y el guion bajo (_).
+- **No empezar con Números**: el nombre de una variable no puede comenzar con un número.
+
+  - *Correcto*: mi_variable1
+
+  - *Incorrecto*: 1variable
