--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -138,3 +138,4 @@ Hay tres reglas principales que debes seguir al nombrar variables en Python:
   - *Correcto*: mi_variable1
 
   - *Incorrecto*: 1variable
+- **No usar palabras claves**: no puedes usar las palabras reservadas de Python (como **for**, **if**, **while**, **def**, etc.) como nombres de variables.
