--- a/2.FuncionesVariables.md
+++ b/2.FuncionesVariables.md
@@ -139,3 +139,5 @@ Hay tres reglas principales que debes seguir al nombrar variables en Python:
 
   - *Incorrecto*: 1variable
 - **No usar palabras claves**: no puedes usar las palabras reservadas de Python (como **for**, **if**, **while**, **def**, etc.) como nombres de variables.
+
+**Convención**: aunque Python permite mayúsculas, la convención de estilo recomendada (PEP 8) es usar minúsculas y separar las palabras con guiones bajos.
